Correo-Usuario y links
Generar Link texto

--- a/src/views/PAT-035/addHotelAdmin.hbs
+++ b/src/views/PAT-035/addHotelAdmin.hbs
@@ -314,7 +314,7 @@
                                             <div class="row">
                                             <div class="col-xl-6">
                                                 <div class="mb-3">
-                                                    <label for="projectname" class="form-label" >Usuario</label>
+                                                    <label for="projectname" class="form-label" >Correo-Usuario</label>
                                                     <input type="text" 
                                                     id="Nom_Hotel" 
                                                     class="form-control" 
