--- a/src/views/PAT-035/empleados.hbs
+++ b/src/views/PAT-035/empleados.hbs
@@ -316,7 +316,7 @@
                 <a href="/PAT-035/endEncuesta" type="button" class="btn btn-primary rounded-pill uil-clipboard-alt">Finalizar Encuesta</a>
               </div>
               <div class="col-2">
-                <button class="btn btn-primary rounded-pill" data-bs-toggle="modal" data-bs-target="#Mensajes"><i class="uil-comment-alt-message"></i> Enviar Mensaje</button>
+                <button class="btn btn-primary rounded-pill" data-bs-toggle="modal" data-bs-target="#Mensajes"><i class="uil-comment-alt-message"></i> Generar Links</button>
               </div>
             </div>
           </div>
