--- a/src/views/Encuesta/encuesta.hbs
+++ b/src/views/Encuesta/encuesta.hbs
@@ -76,7 +76,6 @@
                               <label for="accidente" style="font-size: 1.2rem;">¿Ha presenciado o sufrido alguna vez, durante o con motivo del trabajo un acontecimiento como los siguientes?
                                 <a href="javascript:void(0);" class="text-center text-muted p-2" data-bs-toggle="modal" data-bs-target="#Pregunta1">
                                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
-                                  
                                     <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
                                   </svg>
                                 </a>
@@ -1551,7 +1550,7 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="CreateProjectLabel">En esta pregunta bla bla bla</h5>
+                  <h5 class="modal-title" id="CreateProjectLabel">Accidente,Asaltos,Actos Violentos,Secuestros,Amenazas.Riesgos a la salud</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 
