--- a/src/views/PAT-035/addHotelAdmin.hbs
+++ b/src/views/PAT-035/addHotelAdmin.hbs
@@ -157,29 +157,7 @@
                                     <h6 class="text-overflow m-0">Welcome !</h6>
                                 </div>
 
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <i class="mdi mdi-account-circle me-1"></i>
-                                    <span>My Account</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <i class="mdi mdi-account-edit me-1"></i>
-                                    <span>Settings</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <i class="mdi mdi-lifebuoy me-1"></i>
-                                    <span>Support</span>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item">
-                                    <i class="mdi mdi-lock-outline me-1"></i>
-                                    <span>Lock Screen</span>
-                                </a>
+                            
 
                                 <!-- item-->
                                 <a href="/logout" class="dropdown-item">
@@ -386,7 +364,12 @@
                                                 </div>
                                                   <div class="col-sm-4">
                                                   <button type="submit" class="btn btn-danger rounded-pill mb-3"><i class="mdi mdi-plus"></i> Agregar Hotel</button>
+                                                  
                                                 </div>
+                                                <label >Una vez insertado el hotel puedes cerrar sesión y te redireccionara al login <br>
+                                                ahí deberas dar clic en activar cuenta,posteriormente ingresas el correo del hotel y
+                                                la contraseña de tu elección <br>
+                                                Con estos pasos ya deberías poder ingresar al sistema</label>
                                             </div> <!-- end col-->
 
                                         </form>
