--- a/src/views/Encuesta/encuesta.hbs
+++ b/src/views/Encuesta/encuesta.hbs
@@ -67,7 +67,7 @@
                     </div>
 
                    {{!--  '/:idHotel/:idEncuesta/encuesta/:idEmpleado' --}}
-                    <form action="/{{hotel.id}}/1/encuesta/{{empleado.idEmpleado}}" method="POST">
+                    <form action="/{{hotel.id}}/{{idEncuesta}}/encuesta/{{empleado.idEmpleado}}" method="POST">
                         <div class="section">
 
                           <fieldset>
