--- a/src/views/PAT-035/LandingPage.hbs
+++ b/src/views/PAT-035/LandingPage.hbs
@@ -5,7 +5,7 @@
 
                 <!-- logo -->
                 <a href="" class="navbar-brand me-lg-5">
-                    <img src="images/logo.png" alt="logo" class="logo-dark" height="22" />
+                     <span><img src=" /images/AHMT.png" alt="logo" height="100"></span>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -156,7 +156,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="mt-5">
-                            <p class="text-muted mt-4 text-center mb-0">© <script>document.write(new Date().getFullYear())</script> PAT-035</p>
+                            <p class="text-muted mt-4 text-center mb-0"><script>document.write(new Date().getFullYear())</script>© PAT035 - 35Coderthemes.com</p>
                         </div>
                     </div>
                 </div>
