--- a/src/views/PAT-035/empleados.hbs
+++ b/src/views/PAT-035/empleados.hbs
@@ -733,7 +733,6 @@
                 required
               />
             </div>
-
             <div class="mb-3">
                 <label for="projectDate" class="form-label">Fecha de ingreso en el puesto</label>
                 <div class="input-group mb-3">
@@ -747,7 +746,7 @@
                     pattern="\d{4}/\d{2}/\d{2}"
                     title="Formato de fecha inválido. Utiliza el formato YYYY/MM/DD"
                   />
-                  <span class="input-group-text" id="basic-addon2">YYYY/MM/DD</span>
+                  <span class="input-group-text" id="basic-addon2">AÑO/MES/DIA</span>
                 </div>
             </div>
 
