--- a/src/views/PAT-035/empleados.hbs
+++ b/src/views/PAT-035/empleados.hbs
@@ -312,8 +312,33 @@
               <div class="col-2">
                 <a href="/PAT-035/startEncuesta" type="button" class="btn btn-primary rounded-pill uil-clipboard-alt">Iniciar Encuesta</a>
               </div>
+              {{#if (eq totalEmpleadosPermitidos 0)}}
               <div class="col-2">
-                <a href="/PAT-035/endEncuesta" type="button" class="btn btn-primary rounded-pill uil-clipboard-alt">Finalizar Encuesta</a>
+                <a type="button" class="btn btn-primary rounded-pill uil-clipboard-alt" href="/PAT-035/endEncuesta">Finalizar Encuesta</a>
+              </div>
+              {{else}}
+              <div class="col-2">
+                <a type="button" class="btn btn-primary rounded-pill uil-clipboard-alt" data-toggle="modal" data-target="#confirmModal">Finalizar Encuesta</a>
+              </div>
+              {{/if}}
+              <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="confirmModalLabel">Confirmación</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      ¿Estás seguro de que deseas finalizar la encuesta? Todavia queda {{totalEmpleadosPermitidos}} empleado(s) por contestar
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                      <a href="/PAT-035/endEncuesta" type="button" class="btn btn-danger">Finalizar</a>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="col-2">
                 <button class="btn btn-primary rounded-pill" data-bs-toggle="modal" data-bs-target="#Mensajes"><i class="uil-comment-alt-message"></i> Generar Links</button>
